--- a/assignment2.html
+++ b/assignment2.html
@@ -33,7 +33,7 @@ body  {border: 15px solid black;}
   Age:<br>
   <input type="number" name="age"  min=17 required><br>
   Email ID:<br>
-  <input type="email" name="age" required><br>
+  <input type="email" name="Email" required><br>
   City:<br>
   <input list="city" name="city" required>
   <datalist id="city">
